# MidiWorks

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  GettingToVersion1.md  MidiWorks.sln  MidiWorks.vcxproj  MidiWorks.vcxproj.filters  PolishingVersion1.md  README.md  REFACTORING_GUIDE.md  REFACTORING_PROPOSAL.md  changes.txt  load-save.md
docs/: BUILD_UBUNTU.md  BetterMidiOut.md  BugList.md  CLAUDE.md  CommentingStyle.md  DESIGN_PHILOSOPHY.md  DEVELOPMENT.md  ErrorHandlingImplementation.md  GettingToVersion2.md  JOB_SEARCH.md  LEVELING_UP.md  LandAJob.md  README.md  RecordingProcessBreakdown.md  WritingCallbacks.md
docs/Tests/: LoopRecordingTests.md
docs/archive/: CROSS_PLATFORM_FIXES.md
docs/archive/v1-development/: GettingToVersion1.md  MIDICANVAS_REFACTORING.md  README.md
src/: App.cpp  MidiConstants.h  NoteTypes.h
src/AppModel/: AppModel.cpp  AppModel.h  PaneInfo.h  README.md  SoundBank.h  TrackSet.h  Transport.h
src/AppModel/Clipboard/: Clipboard.cpp  Clipboard.h
src/AppModel/DrumMachine/: DrumMachine.cpp  DrumMachine.h
src/AppModel/MetronomeService/: MetronomeService.h
src/AppModel/MidiInputManager/: MidiInputManager.cpp  MidiInputManager.h
src/AppModel/NoteEditor/: NoteEditor.cpp  NoteEditor.h
src/AppModel/PreviewManager/: PreviewManager.cpp  PreviewManager.h
src/AppModel/ProjectManager/: ProjectManager.cpp  ProjectManager.h  README.md
src/AppModel/RecordingSession/: RecordingSession.cpp  RecordingSession.h
src/AppModel/Selection/: Selection.cpp  Selection.h
src/AppModel/SoundBank/: ChannelColors.h  SoundBank.cpp  SoundBank.h
src/AppModel/TrackSet/: TrackSet.cpp  TrackSet.h
src/AppModel/Transport/: Transport.cpp  Transport.h
src/AppModel/UndoRedoManager/: UndoRedoManager.cpp  UndoRedoManager.h
src/Commands/: ClearTrackCommand.h  ClipboardCommands.h  Command.h  DeleteMultipleNotesCommand.h  MoveMultipleNotesCommand.h  MultiNoteCommands.cpp  MultiNoteCommands.h  NoteEditCommands.cpp  NoteEditCommands.h  PasteCommand.h  PasteToTracksCommand.h  QuantizeCommand.h  RecordCommand.h  TrackCommands.h
src/MainFrame/: KeyboardHandler.cpp  KeyboardHandler.h  MainFrame.cpp  MainFrame.h  MainFrameEventHandlers.cpp  MainFrameIDs.h  PaneInfo.h  README.md
src/Panels/: ChannelControls.h  ChannelTrackRow.h  Dummy.h  Log.h  MidiCanvas.cpp  MidiCanvas.h  MidiSettings.h  Panels.h  ShortcutsPanel.h  SoundBankPanel.h  TransportPanel.h  UndoHistoryPanel.h
src/Panels/DrumMachine/: DrumMachinePanel.cpp  DrumMachinePanel.h
src/Panels/MidiCanvas/: MidiCanvas.cpp  MidiCanvas.h  MidiCanvasConstants.h  MidiCanvasEventHandlers.cpp
src/RtMidiWrapper/: README.md
src/RtMidiWrapper/MidiDevice/: MidiIn.h  MidiOut.h
src/RtMidiWrapper/MidiMessage/: MidiMessage.h  SoundMaps.h
